--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -656,7 +656,7 @@ echo ""
         // Values:
         //     0 - Disabled (Default);
         //     1 - Enabled;
-        dsp_enhance_stereo "0" // 1 (acevinicius)
+        dsp_enhance_stereo "1" // 1 (acevinicius)
         
         // Surround sound speaker setting, (Default = 1)
         //
@@ -666,14 +666,14 @@ echo ""
         //     2 - Stereo speakers;
         //     4 - Quad surround sound;
         //     5 - 5.1 surround sound;
-        snd_surround_speakers "2"
+        snd_surround_speakers "1"
 
         // Advanced 3D audio processing option [HRTF and Sound Occlusion].
         //
         // Values:
         //     0 = Enabled (Default);
         //     1 = Disabled;
-        snd_hwcompat "1" // 0 (acevinicius)
+        snd_hwcompat "0" // 0 (acevinicius)
 
         // Mute game volume when alt-tabbed.
         //
@@ -694,7 +694,7 @@ echo ""
         // Values:
         //     0 - Minimum;
         //     1 - Maximum (Default);
-        snd_menumusic_volume "0.`010503" // 0.027991 (acevinicius)
+        snd_menumusic_volume "0.010503" // 0.027991 (acevinicius)
 
         // Round start music volume.
         //
@@ -812,7 +812,7 @@ echo ""
         //     -1 - Operating system's current input device settings
         //     0  - Minimum;
         //     1  - Maximum (Default);
-        voice_mixer_volume "0.08"
+        voice_mixer_volume "-1"
 
         // Personal transmitted VOIP.
         //
@@ -976,7 +976,7 @@ echo ""
         //     2 - Enabled and smoothed out with minimum/average values;
         //     3 - Server setting;
         //     4 - Enabled and logged to text file;
-        cl_showfps "0"
+        cl_showfps "2"
 
         // Gamma.
         //
@@ -984,7 +984,7 @@ echo ""
         //     1.6 - Minimum [Light];
         //     2.2 - Default;
         //     2.6 - Maximum [Dark];
-        mat_monitorgamma "2.2" // 2.0 (acevinicius)
+        mat_monitorgamma "2.0" // 2.0 (acevinicius)
 
         // TV Gamma.
         //
@@ -1827,7 +1827,7 @@ echo ""
             bind "," "sv_cheats 1; noclip"
             bind "[" "host_timescale 1"
             bind "]" "host_timescale 4"
-            bind "\" "say Cala a boca John"
+            bind "\" "say DA UMA MAMADA NA MINHA CACETA AQUI"
             bind "/" "playerradio deathcry Tirei-Um-Corno-Do-Rabo"
 
             bind "ESCAPE" "cancelselect"
